--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+.input {
+  @apply block w-full rounded-md border p-2 text-sm;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -18,6 +22,7 @@
     --foreground: #ededed;
   }
 }
+
 
 body {
   background: var(--background);
